--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@ section {
               - Durasi lebih panjang (3000ms) untuk efek dramatic 
             -->
             <div class="image" data-aos="zoom-in" data-aos-duration="3000">
-                <img src="img/Aku.jpg" alt="">
+                <img src="Aku.jpg" alt="">
             </div>
         </div>
     </section>
